[metadata]
name = visitsimv2 
version = 17.8.6
author = Christoph Statz
author-email = christoph.statz@tu-dresden.de
summary = Python3 and Python2 complient wrapper for VisIt's simV2 insitu visualization.
license = BSD-3-Clause 
description-file = README.md
home-page = https://github.com/cstatz/visitsimv2
requires-python = >=2.7
requires-dist =
    setuptools
    pbr
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
 
[files]
packages =
    visitsimv2
extra-files =
    LICENSE.txt
    README.md
    src/Py2and3Support.h
    src/DeclareDataCallbacks.h
    src/SimHelperFunc.h
    src/SimUI.h
    src/SimV2Tracing.h
    src/UI_Connection.h
    src/VisItControlInterface_V2.h
    src/VisItControlInterface_V2_plotting.h
    src/VisItDataInterface_V2.h
    src/VisItDynamic.h
    src/VisItFortran.h
    src/VisItInterfaceTypes_V2.h
    src/VisItInterfaceTypes_V2P.h
    src/VisItQueryInterface_V2.h
    src/VisIt_CSGMesh.h
    src/VisIt_CommandMetaData.h
    src/VisIt_CurveData.h
    src/VisIt_CurveMetaData.h
    src/VisIt_CurvilinearMesh.h
    src/VisIt_DomainBoundaries.h
    src/VisIt_DomainList.h
    src/VisIt_DomainNesting.h
    src/VisIt_ExpressionMetaData.h
    src/VisIt_MaterialData.h
    src/VisIt_MaterialMetaData.h
    src/VisIt_MeshMetaData.h
    src/VisIt_MessageMetaData.h
    src/VisIt_NameList.h
    src/VisIt_OptionList.h
    src/VisIt_PointMesh.h
    src/VisIt_RectilinearMesh.h
    src/VisIt_SimulationMetaData.h
    src/VisIt_SpeciesData.h
    src/VisIt_SpeciesMetaData.h
    src/VisIt_UnstructuredMesh.h
    src/VisIt_VariableData.h
    src/VisIt_VariableMetaData.h
    src/VisIt_View2D.h
    src/VisIt_View3D.h
    src/simV2_PyObject.h
    src/simV2_custom.h
    src/simV2_python_config.h
